--- a/about.html
+++ b/about.html
@@ -55,10 +55,14 @@
         <section class="row">
           <div class="col-md-6">
             <h5 class="display-4" >About us</h5>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, blanditiis nihil. Facere obcaecati ratione odio suscipit molestias, excepturi illo exercitationem possimus facilis tempora commodi autem dolore eum, quaerat quidem alias? Necessitatibus magni nobis doloremque, eaque praesentium vero, eligendi minima culpa id voluptates aliquid quidem ad laudantium pariatur tenetur recusandae facere officiis delectus! Eum ratione autem repellat ex obcaecati in labore eius earum magni, perspiciatis debitis temporibus explicabo porro sequi nobis pariatur dolore odio deserunt, omnis sed nihil inventore fuga minima accusantium. Ut odio ratione reiciendis possimus aperiam consectetur molestias explicabo voluptatum earum maxime, eum esse repellat facere. Facilis, iste consequuntur!
+            <p>Nanny care is commited to bridge the gap in the caregiving sector.we are committed to provide our clients with the best services and with accountability.
+              we ensure our caregivers possesses two key qualifications: a compassionate heart and home care experience. Find out if you have the qualities & skills required to succeed with us.
+              we offer services in country wide.we are  offering job opportunities for our youth.where  we are able to register people to offer the ervices.if intrested feel free to rergister with us.
+              
+</p>
           </div>
           <div class="col-md-6">
-<img src="images/averie-woodard-axTG1hSQ6W4-unsplash.jpg" alt="" width="500" height="350">
+<img src="images/kelly-sikkema-gS9rBZo65-k-unsplash.jpg" alt="" width="500" height="350">
           </div>
         </section>
       </div>
