--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                 <input type="email" placeholder="Email"><br><br>
                 <input type="text" placeholder="Number"><br><br>
                 <textarea name="" id="" cols="55" rows="2" placeholder="Message"></textarea><br>
-               <p class="text-center p-2 m-2"> <button class="text-white bg-success">Submit</button></p>
+               <p class="text-center p-2 m-2"> <button onclick="msg()" class="text-white bg-success">Submit</button></p>
             </form>
       </div>
       <div class="col-md-6">
@@ -109,5 +109,10 @@ Telephone:   <br>
         </section>
         <p class="text-center text-white">Copyright 2024|developed by susan ngesa</p>
       </div>
+      <script>
+        function msg(){
+          alert("successfully submited")
+        }
+      </script>
 </body>
 </html>
