--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/bootstrap.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+    <title>Nanny Care</title>
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLkjPd2IjwVg8R/8UrXpBoBR+/ZpQFlaJieGnAvdGoxwtlj2d3M3PzDiyOiZzI5K" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/bootstrap.css"> <!-- Ensure correct path -->
 </head>
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: pink;">
@@ -16,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav" >
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
@@ -26,33 +28,32 @@
               <li class="nav-item">
                 <a class="nav-link" href="testimonials.html">Testimonials</a>
               </li>
-             
               <li class="nav-item">
                 <a class="nav-link" href="nanny.html">Become Nanny</a>
               </li>
-
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="service.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Services
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="day.html">Day care</a></li>
-                  <li><a class="dropdown-item" href="caregiver.html">caregiver</a></li>
-                  <li><a class="dropdown-item" href="mamafua.html">mama fua</a></li>
-
+                  <li><a class="dropdown-item" href="caregiver.html">Caregiver</a></li>
+                  <li><a class="dropdown-item" href="mamafua.html">Mama Fua</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="FAQs.html">FAQs</a>
-            </li>
+                <a class="nav-link" href="FAQs.html">FAQs</a>
+              </li>
               <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
+                <a class="nav-link" href="contact.html">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
-      </nav>
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    </nav>
+
+    <!-- Carousel -->
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/kelly-sikkema-gS9rBZo65-k-unsplash.jpg" class="d-block w-100" alt="..." height="450">
@@ -72,46 +73,56 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
-      <div class="container p-3 m-3">
+    </div>
+
+    <!-- Other Content -->
+    <div class="container p-3 m-3">
         <section class="row">
             <div class="col-md-6 p-5">
-                <h2 style="color: pink;">MISION</h2>
-                <P>To be able to bring job opportunities to our young youth in this vasertile job hunting space.And to fill the gap in the job market in this space.this will ensure that all youths get an equal opportunity in the job market</P>
+                <h2 style="color: pink;">MISSION</h2>
+                <p>To be able to bring job opportunities to our young youth in this versatile job hunting space. And to fill the gap in the job market in this space. This will ensure that all youths get an equal opportunity in the job market.</p>
             </div>
             <div class="col-md-6 p-5">
                 <img src="images/tamara-govedarovic-ovpvfNTI5qU-unsplash (2).jpg" alt="" width="650px" height="300px" style="border-radius:80px 0 80px 0px">
             </div>
         </section>
-      </div>
-      <div class="text-white p-3 bg-dark">
+    </div>
+
+    <!-- Footer -->
+    <div class="text-white p-3 bg-dark">
         <section class="row">
           <div class="col-md-4">
-<h5>Contact Us</h5>
-<p>Baba Dogo,Main Road</p>
-<p>p.o.box 17-40600</p>
-<p>kenya</p>
-Telephone:   <br>
-254712461219
-<p>NANNY CARE KENYA</p>
-</div>
-<div class="col-md-4">
-  <h5>Quick Links</h5>
-  <p><a href="about.html" style="color: white;text-decoration: none;">About us</a></p>
-  <p><a href="service.html"  style="color: white;text-decoration: none;">Services</a></p>
-  <p><a href="testimonials.html"  style="color: white;text-decoration: none;">Testimonials</a></p>
-  <p><a href="contact.html"  style="color: white;text-decoration: none;">Contacts</a></p>
-</div>
-<div class="col-md-4">
-  <h5>Support</h5>
-  <p>General:info@nannycare.com</p>
-  <p>Enquiry:nannycare.or.ke</p>
-  <p>emergency:emergency@church.com</p>
-  Telephone:   <br>
-  254712461219
-  <p>Nanny Care</p>
+            <h5>Contact Us</h5>
+            <p>Baba Dogo, Main Road</p>
+            <p>P.O. Box 17-40600</p>
+            <p>Kenya</p>
+            Telephone: <br>
+            254712461219
+            <p>NANNY CARE KENYA</p>
+          </div>
+          <div class="col-md-4">
+            <h5>Quick Links</h5>
+            <p><a href="about.html" style="color: white; text-decoration: none;">About Us</a></p>
+            <p><a href="service.html" style="color: white; text-decoration: none;">Services</a></p>
+            <p><a href="testimonials.html" style="color: white; text-decoration: none;">Testimonials</a></p>
+            <p><a href="contact.html" style="color: white; text-decoration: none;">Contacts</a></p>
+          </div>
+          <div class="col-md-4">
+            <h5>Support</h5>
+            <p>General: info@nannycare.com</p>
+            <p>Enquiry: enquiry@nannycare.or.ke</p>
+            <p>Emergency: emergency@church.com</p>
+            Telephone: <br>
+            254712461219
+            <p>Nanny Care</p>
+          </div>
         </section>
-        <p class="text-center text-white">Copyright 2024|developed by susan ngesa</p>
-      </div>
+        <p class="text-center text-white">Copyright 2024 | Developed by Susan Ngesa</p>
+    </div>
+
+    <!-- Bootstrap JS, Popper.js, and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybRr9eNzQn4HgWSTyM6zYRhrTwkRkE6E23CZ/j6w6BfiFMH/S" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-mQ93g8dkG16BfK9lUfa91fScbOjV0gV6zVT3QNfZB+EOmKx08++6ZGlnz2vOxOa9" crossorigin="anonymous"></script>
+
 </body>
 </html>
