--- a/service.html
+++ b/service.html
@@ -72,22 +72,24 @@
 <h3 class="text-center">Services we offer</h3>
 </div>
       <div class="container">
-        <section class="row p-3" style="gap:20px">
-          <div class="col-md-3 bg-light p-2 ">
-            <h4 class="text-center">Daycare</h4>
-            <p class="text-center">we offer daycare sevices to our clients.feel free to contact us.</p>
-            <h3 class="text-center m-3"><button class=" w-60" style="background-color: pink; border: none; color: white;">More </button></h3>
+        <section class="row p-3" style="gap:30px">
+          <div class="col-md-3 bg-light">
+            <h4 class="text-center p-4" >Daycare</h4>
+            <p class="text-center p-4" >we offer daycare sevices to our clients.feel free to contact us.</p>
+            <h3 class="text-center m-3"><button class="bg-info"><a href="day.html" style="text-decoration: none;color: white;">More</a></button></h3>
           </div>
-          <div class="col-md-4 bg-light p-2">
+          <div class="col-md-3 bg-light">
             <h4 class="text-center p-4">caregiver</h4>
-            <p class="text-center">we offer daycare sevices to our clients.feel free to contact us.</p>
-            <h3 class="text-center m-3"><button class=" w-40" style="background-color:pink;border: none; color: white;" >More </button></h3>
+            <p class="text-center p-4">we offer caregiving sevices to our clients.feel free to contact us.</p>
+            <h3 class="text-center m-3"><button class="bg-info"><a href="day.html" style="text-decoration: none;color:white;">More</a></button></h3>
+           
 
           </div>
-          <div class="col-md-3 bg-light p-2">
+          <div class="col-md-3 bg-light">
             <h4 class="text-center p-4">MamaFua</h4>
-            <p class="text-center">we offer daycare sevices to our clients.feel free to contact us.</p>
-            <h3 class="text-center m-3"><button class=" w-60" style="background-color: pink;border:none; color: white;">More </button></h3>
+            <p class="text-center p-4">we offer mamafua sevices to our clients.feel free to contact us.</p>
+            <h3 class="text-center m-3"><button class="bg-info" style="text-decoration: none;color:white;"><a href="day.html" style="text-decoration: none; color:white;">More</a></button></h3>
+            
 
           </div>
         </section>
