--- a/form.html
+++ b/form.html
@@ -88,7 +88,12 @@
         <label class="input-group-text" for="inputGroupFile01">Upload Photo</label>
         <input type="file" class="form-control" id="inputGroupFile01">
       </div>
-     <p class="text-center m-3"> <button type="button" class="btn btn-primary">submit</button></p>
+     <p class="text-center m-3"> <button onclick="msg()" type="button" class="btn btn-primary">submit</button></p>
     </form>
+    <script>
+      function msg(){
+      alert("successfully submited your message please whait for confirmation message");
+      }
+    </script>
 </body>
 </html>
